fix: hide empty queue on small screens

--- a/src/client/css/tool.css
+++ b/src/client/css/tool.css
@@ -174,6 +174,14 @@
 			grid:
 				'content' calc((100dvb - 2 * 48px - 2 * 32px) / 2)
 				'aside' calc((100dvb - 2 * 48px - 2 * 32px) / 2);
+
+			&:has(> aside > article.list > ul.base:empty) {
+				grid: 'content' auto;
+
+				& > aside {
+					display: none;
+				}
+			}
 		}
 	}
 }
